Fixed horizontal scroll not showing the Add List when overflowing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,16 @@
     display: none; /* for Chrome, Safari, and Opera */
   }
 
+  .scroll-x-hidden {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-x: scroll; 
+  }
+
+  .scroll-x-hidden::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+
   .selected-tab {
     @apply border-trello-blue-100 border-current
   }
